Stubbing out initial html with tables. Styles and plumbing between js will take place later

--- a/index.html
+++ b/index.html
@@ -2,5 +2,47 @@
   <html lang="en">
   <body>
   	<h1>Mortgage Calculator</h1>
+    <table style="width:400px">
+      <tr>
+        <td>Home Price ($)</td>
+        <td><input type="text" id="price"></td>
+      </tr>
+      <tr>
+        <td>Percent Down (0-1)</td>
+        <td><input type="text" id="percent_down"></td>
+      </tr>
+      <tr>
+        <td>Interest Rate (0-1)</td>
+        <td><input type="text" id="interest_rate"></td>
+      </tr>
+      <tr>
+        <td>Lifetime of Loan (years)</td>
+        <td><input type="text" id="term_years"></td>
+      </tr>
+      <tr>
+        <td>Yearly Income Before Tax ($)</td>
+        <td><input type="text" id="income"></td>
+      </tr>
+      <tr>
+        <td>Yearly Home Insurance ($)</td>
+        <td><input type="text" id="insurance"></td>
+      </tr>
+      <tr>
+        <td>Tax Rate (0-1)</td>
+        <td><input type="text" id="tax_rate"></td>
+      </tr>
+    </table>
+    <hr style="height:2px;width:400px;text-align:left;margin-left:0;border-width:0;color:gray;background-color:gray">
+    <table>
+      <tr>
+        <td>Monthly Expense (PITI) ($)</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Expense / Income (28% rule)</td>
+        <td></td>
+      </tr>
+    </table>
+
   </body>
   </html>
