More tweaks to CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
   <html lang="en">
   <head>
-    <title>Mortgage Calculator</title>
+    <title>Home Affordability Calculator</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css"> 
   </head>
   <body>
-  	<h1>Mortgage Calculator</h1>
+  	<h1>Home Affordability Calculator</h1>
     <table>
       <colgroup>
         <col span="1" style="width: 70%;">
